# parkinglot

./: README.md  コインパーキングUI.psd  コインパーキングUI.psd_
flutter/: README.md  pubspec.yaml  コインパーキングUI.psd_
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/coin_parking_demo/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: footer.dart  good_bye.dart  header.dart  main.dart  main_window.dart  parking_slot.dart  payment.dart  welcome.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
pico/: Cargo.toml
pico/src/: main.rs
pico/ui/: MainWindow.slint  main.slint
pico2/: Cargo.toml  memory.x
pico2/.cargo/: config.toml
pico2/src/: main.rs  picores28.rs
pico2/src/picores28/: xpt2046.rs
pico2/ui/: MainWindow.slint
qt/: main.qml
qt-nogpu/: MainWindow.ui.qml  main.qml
qt/ui/: MainWindow.ui.qml
slint/: MainWindow.slint  README  main.slint
